# strusBase

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  README.md
.Attic/: lockfreeStringMap.cpp
.Attic/include/private/: utils.hpp
.Attic/include/strus/: introspectionInterface.hpp
.Attic/src/: introspection.cpp
cmake/: ArchFeatures.cmake  CXX11Features.cmake  boost.cmake  build_rules.cmake  find_cppcheck.cmake  intl.cmake  link_rules.cmake  report_build_settings.cmake
cmake/archtests/: test-x86_have_asm_bsf.cpp
cmake/cxx11tests/: c++11-test-regex.cpp
doc/: doxygen.conf  upload.sh
doc/doxygen/html/: annotated.html  atomic_8hpp.html  atomic_8hpp_source.html  bitOperations_8hpp.html  bitOperations_8hpp_source.html  bitset_8hpp.html  bitset_8hpp_source.html  classes.html  classstrus_1_1AtomicCounter-members.html  classstrus_1_1AtomicCounter.html  classstrus_1_1AtomicFlag-members.html  classstrus_1_1AtomicFlag.html  classstrus_1_1BlockAllocator-members.html  classstrus_1_1BlockAllocator.html  classstrus_1_1ByteOrder-members.html  classstrus_1_1ByteOrder.html  classstrus_1_1ByteOrder_3_01bool_01_4-members.html  classstrus_1_1ByteOrder_3_01bool_01_4.html  classstrus_1_1ByteOrder_3_01double_01_4-members.html  classstrus_1_1ByteOrder_3_01double_01_4.html  classstrus_1_1ByteOrder_3_01float_01_4-members.html  classstrus_1_1ByteOrder_3_01float_01_4.html  classstrus_1_1ByteOrder_3_01int16__t_01_4-members.html  classstrus_1_1ByteOrder_3_01int16__t_01_4.html  classstrus_1_1ByteOrder_3_01int32__t_01_4-members.html  classstrus_1_1ByteOrder_3_01int32__t_01_4.html  classstrus_1_1ByteOrder_3_01int64__t_01_4-members.html  classstrus_1_1ByteOrder_3_01int64__t_01_4.html  classstrus_1_1ByteOrder_3_01int8__t_01_4-members.html  classstrus_1_1ByteOrder_3_01int8__t_01_4.html  classstrus_1_1ByteOrder_3_01uint16__t_01_4-members.html  classstrus_1_1ByteOrder_3_01uint16__t_01_4.html  classstrus_1_1ByteOrder_3_01uint32__t_01_4-members.html  classstrus_1_1ByteOrder_3_01uint32__t_01_4.html  classstrus_1_1ByteOrder_3_01uint64__t_01_4-members.html  classstrus_1_1ByteOrder_3_01uint64__t_01_4.html  classstrus_1_1ByteOrder_3_01uint8__t_01_4-members.html  classstrus_1_1ByteOrder_3_01uint8__t_01_4.html  classstrus_1_1DataRecordFile-members.html  classstrus_1_1DataRecordFile.html  (+238 more)
doc/doxygen_include/: strus.md
include/private/: errorUtils.hpp  internationalization.hpp
include/strus/: constants.hpp  debugTraceInterface.hpp  errorBufferInterface.hpp  errorCodes.hpp  fileLocatorInterface.hpp  introspectionInterface.hpp  numericVariant.hpp  reference.hpp  structView.hpp  timeStamp.hpp  versionBase.hpp  versionBase.hpp.in
include/strus/base/: asciiCharSet.hpp  atomic.hpp  base64.hpp  bitOperations.hpp  bitset.hpp  cmdLineOpt.hpp  configParser.hpp  crc32.hpp  dataRecordFile.hpp  dynamic_bitset.hpp  enable_if.hpp  env.hpp  exec.hpp  filehandle.hpp  fileio.hpp  hton.hpp  (+35 more)
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base64.cpp  cmdLineOpt.cpp  configParser.cpp  crc32.cpp  cxx11features.hpp.in  dataRecordFile.cpp  env.cpp  exec.cpp  filehandle.cpp  fileio.cpp  fileio_sys.hpp  fileio_sys.hpp.in  inputStream.cpp  introspection.cpp  jobQueueWorker.cpp  malloc.cpp  minimalCover.cpp  numParser.cpp  numericVariant.cpp  numstring.cpp  periodicTimerEvent.cpp  platform.cpp  programLexer.cpp  programOptions.cpp  pseudoRandom.cpp  regex.cpp  sleep.cpp  snprintf.c  string_conv.cpp  string_format.cpp  string_named_format.cpp  structView.cpp  symbolTable.cpp  uintCompaction.cpp  utf8.cpp
src/error/: CMakeLists.txt  debugTrace.cpp  debugTrace.hpp  errorBuffer.cpp  errorBuffer.hpp  libstrus_error.cpp
src/filelocator/: CMakeLists.txt  libstrus_filelocator.cpp
src/timestamp/: CMakeLists.txt  libstrus_timestamp.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/: CMakeLists.txt
tests/base64/: CMakeLists.txt
tests/base64/src/: CMakeLists.txt  testBase64.cpp
tests/bitset/: CMakeLists.txt
tests/bitset/src/: CMakeLists.txt  testBitSets.cpp
tests/byteOrder/: CMakeLists.txt
tests/byteOrder/src/: CMakeLists.txt  testByteOrder.cpp
tests/crc32/: CMakeLists.txt
tests/crc32/src/: CMakeLists.txt  testCrc32.cpp
tests/errorBuffer/: CMakeLists.txt
tests/errorBuffer/src/: CMakeLists.txt  testErrorBuffer.cpp
tests/errorCodes/: CMakeLists.txt
tests/errorCodes/src/: CMakeLists.txt  testErrorCodes.cpp
tests/exec/: CMakeLists.txt
tests/exec/src/: CMakeLists.txt  testExec.cpp
tests/filePattern/: CMakeLists.txt
tests/filePattern/src/: CMakeLists.txt  testFilePattern.cpp
tests/filehandle/: CMakeLists.txt
tests/filehandle/src/: CMakeLists.txt  testFileHandle.cpp
tests/fileio/: CMakeLists.txt
tests/fileio/src/: CMakeLists.txt  testFileIo.cpp
tests/inputStream/: CMakeLists.txt
tests/inputStream/src/: CMakeLists.txt  testInputStream.cpp
tests/lockfreemap/: CMakeLists.txt
tests/lockfreemap/src/: CMakeLists.txt  testLockfreeStringMap.cpp
tests/minimalCover/: CMakeLists.txt
tests/minimalCover/src/: CMakeLists.txt  primeNumbers.hpp  testMinimalCover.cpp
tests/numParser/: CMakeLists.txt
tests/numParser/src/: CMakeLists.txt  testNumParser.cpp
tests/numericVariant/: CMakeLists.txt
tests/numericVariant/src/: CMakeLists.txt  testNumericVariant.cpp
tests/programLexer/: CMakeLists.txt
tests/programLexer/src/: CMakeLists.txt  testProgramLexer.cpp
tests/reference/: CMakeLists.txt
tests/reference/src/: CMakeLists.txt  testReference.cpp
tests/regex/: CMakeLists.txt
tests/regex/src/: CMakeLists.txt  testRegex.cpp
tests/strings/: CMakeLists.txt
tests/strings/src/: CMakeLists.txt  testStrings.cpp
tests/threads/: CMakeLists.txt
tests/threads/src/: CMakeLists.txt  testThreads.cpp
tests/timestamp/: CMakeLists.txt
tests/timestamp/src/: CMakeLists.txt  testTimeStamp.cpp
tests/uintCompaction/: CMakeLists.txt
tests/uintCompaction/src/: CMakeLists.txt  testUintCompaction.cpp
tests/utf8/: CMakeLists.txt
tests/utf8/src/: CMakeLists.txt  testUtf8.cpp
(+3 files in other folders)
