cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

add_subdirectory( numParser )
add_subdirectory( byteOrder )
add_subdirectory( crc32 )
add_subdirectory( base64 )
add_subdirectory( inputStream )
add_subdirectory( numericVariant )
add_subdirectory( bitset )
add_subdirectory( threads )
add_subdirectory( strings )
add_subdirectory( exec )
add_subdirectory( errorCodes )
add_subdirectory( regex )
add_subdirectory( programLexer )
add_subdirectory( filehandle )
add_subdirectory( fileio )
add_subdirectory( filePattern )
add_subdirectory( minimalCover )
add_subdirectory( lockfreemap )
add_subdirectory( reference )
